# playground

./: .gitignore  boxify  dvorak-encode.py  gcode-translate.sh  get-dbus-notifyclosed.py  portrait-monitor-window-manage.py  ruler  select-input.user.js
dcled/: dcled-dbus-control.py  dcled-system-dbus-control.py  showdcledmessage
fabulous-vim/: fabulous.vim  gen.py
firefox-gtk-fix/: firefox-fix-dev-edition.hook  firefox-fix-dev-edition.sh  firefox-fix.hook  firefox-fix.sh
keypad-macros/: .gitignore  CMakeLists.txt  focus-window-strstr.cpp  keypad-macros.config.h.sample  keypad-macros.cpp  keypad_macros.cbp  main.cpp  mouse-do.cpp  mouse_do.cpp  notify-usage.cpp  warn-bar.cpp
second-keypad/: bind.py  keymap.xkb  keypad-shortcuts.py  setkeymap.sh  setnumlock
